Updates to vaccine

--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -11,6 +11,9 @@ Finally both me and my wife managed to get our first shot 💉 of the [Moderna](
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
+* TOC
+{:toc}
+
 ## mRNA vaccines and the Mother effing Nature at its best!
 
 When I saw the below video, I was blown away how the new mRNA vaccines work. They basically inject one (out of 29) types of protein from the COVID-19 into our body, which in turn is prompted to create antibodies for it and remember that this thing is bad.
@@ -19,7 +22,7 @@ That's amazing. How we can stimulate Mother Nature to do its best work. How our 
 
 {% include video.html id="fZLxvo21XDg" %}
 
-After watching this video I wanted to get one of [these mRNA based vaccines](https://en.wikipedia.org/wiki/RNA_vaccine). Other vaccines are good, too. Any vaccine is great.
+After watching this video I wanted to get one of [these mRNA based vaccines][r]. Other vaccines are good, too. Any vaccine is great.
 
 ## Do your research and get vaccinated!
 
@@ -27,7 +30,7 @@ What in this day and age completely flabbergasted me is the response of many int
 
 I mean, why? What's the deal?
 
-We live in 2021. The access to information is infinite. I believe any smart person can do their own research to see if vaccines are good, if these vaccines were properly researched, if the mRNA technology is valid enough. I don't have to convince you and I won't. Do your research. Don't depend on alarmist information you see on social media but just spend 15 minutes researching the subject.
+We live in 2021. The access to information is infinite. I believe any smart person can do their own research to see if vaccines are good, if these vaccines were properly researched, if the mRNA technology is valid enough. I don't have to convince you and I won't. Do your research. Don't depend on alarmist information you see on social media but just spend 15 minutes researching the subject. Or just keep reading this article, there are more sources below.
 
 If you don't believe me, take John Oliver's word for it, he can explain things like no other:
 
@@ -45,5 +48,82 @@ Good luck. Do your research. Be smart. Choose health. Let's get this pandemic ov
 
 And if you're catholic like me, [listen to pope Francis](https://twitter.com/Pontifex/status/1391056548152152064).
 
+## How Linus Torvalds, the Linux founder explains vaccines
+
+**Update June 11, 2021**, [John Gruber]() linked to this mailing list written by the founder of Linux, you know, the operating system that's basically on all of the servers on the Internet.
+
+[Please read his entire response to an anti-vaxxer][l]
+
+But here are the best bits explaining the vaccine:
+
+> Just for your edification in case you are actually willing to be educated: mRNA doesn't change your genetic sequence in any way. It is the exact same intermediate - and temporary - kind of material that your cells generate internally all the time as part of your normal cell processes, and all that the mRNA vaccines do is to add a dose their own specialized sequence that then makes your normal cell machinery generate that spike protein so that your body learns how to recognize it.
+
+He very nicely explains what the video above explained also well about the mRNA technology:
+
+> The half-life of mRNA is a few hours. Any injected mRNA will be all gone from your body in a day or two. It doesn't change anything long-term, except for that natural "your body now knows how to recognize and fight off a new foreign protein" (which then tends to fade over time too, but lasts a lot longer than a few days). And yes, while your body learns to fight off that foreign material, you may feel like shit for a while. That's normal, and it's your natural response to your cells spending resources on learning how to deal with the new threat.
+
+He also highlights the best parts about the safety of mRNA vaccines:
+
+> And of the vaccines, the mRNA ones are the most modern, and the most targeted - exactly because they do *not* need to have any of the other genetic material that you traditionally have in a vaccine (ie no need for basically the whole - if weakened - bacterial or virus genetic material). So the mRNA vaccines actually have *less* of that foreign material in them than traditional vaccines do. And  a *lot* less than the very real and actual COVID-19 virus that is spreading in your neighborhood.
+
+Again, read his entire email [it's really good][l]
+
+## Vaccine Q&A - typical questions people anxious about the vaccines ask:
+
+### Q: I feel like I'm part of an experiment as the mRNA vaccine was developed too quickly?
+
+A: Please [read about this vaccine][r] again. All vaccines are great and have saved millions of people in the world, but these are modern and are really better:
+
+> RNA vaccines offer specific advantages over traditional protein vaccines.[5][4] Because RNA vaccines are not constructed from an active pathogen (or even an inactivated pathogen), they are non-infectious. In contrast, traditional vaccines require the production of pathogens, which, if done at high volumes, could increase the risks of localized outbreaks of the virus at the production facility.
+
+### Q: what's the deal if I just "wait a little"? Why rush it?
+
+A: Because of one thing - **Herd immunity**!
+
+Just [read this article published by the University of Columbia, NY][h]. Especially this part:
+
+> WHY IS HERD IMMUNITY IMPORTANT? While it may be unrealistic to assume every individual in a population is able to get vaccinated, those outstanding individuals will then rely on herd immunity to avoid contracting a virus. Reasons for not receiving a vaccination include: People with weak immune systems, People that are going through chemotherapy treatments, Newborn babies and elderly people, People living with HIV and (unfortunately) those who refuse vaccination… In every community, you will find individuals who fall under the above categories, making herd immunity that much more important. These people then depend on others getting vaccinated in order to be indirectly protected by them.
+
+Basically, if you're healthy and eligible for a vaccine, you should get it. Not just for yoruself, but also for others around you. [Please don't be selfish here - everyone needs to do their part][h]!
+
+### Q: what if I just get infected and I'll be done with it. I'm healthy, I'll be fine!?
+
+A: Maybe you will, maybe you won't. I personally know people in their thirties who got the virus and ended up in the hospital. Some of them died! Some of them survived but still months later had respitory issues and fatigue. And they were not obese, had no underlying conditions they knew of, nothing like that. Do you really want to risk it?
+
+One of my close friends in his thirties had COVID-19 and didn't know about it, but after a routine check-up he discovered he was suffering quite severe heart problems. He did his tests and yes, he had the disease and it caused serious harm to his heart which he needs to treat now. Again, do you want to risk it?
+
+After years of vaccines we know the long term effects of them. And we don't know the long-term effects of COVID-19. Do you want to find out the hard way?
+
+BTW, if you have kids, did you get them vaccinated as per vaccination calendar? Just google the diseases your kids will never have thanks to the miracle of modern medicine and vaccination. These would be really bad diseases. Like [Polio](https://en.wikipedia.org/wiki/Polio) or [Measles](https://en.wikipedia.org/wiki/Measles). Now add COVID-19 to that.
+
+### Q: I think I already had COVID-19 so why get vaccinated?
+
+A: [The experts say it's important][c]:
+
+> "Even though you’ve had COVID-19, it’s still very important for you to get the vaccine," Dr. Englund says. "We know that a small number of people can get covid-19 a second time." She says even if you haven’t had COVID-19 a second time, it’s important you rev up your immune system in case you do see it again. And the vaccine will help you do that.
+
+### Q: What if I get a fever after I get the vaccine and don't feel well?
+
+A: This is your body creating anti-bodies. It's your body working overtime so it might get fever. You might feel bad. It all depends. But if you really feel bad after getting the vaccine, just think how you'd feel if you really did get hit by the virus.
+
+### Q: How about the stats?
+
+Just look at the USA stats: [966 people died after getting the vaccine](https://www.newsweek.com/covid-vaccine-deaths-cause-pfizer-moderna-fact-check-966-died-1574447) but not necessarily because of it. After 90 Million vaccines being delivered.
+
+Vaccine odds: **0.001%**
+
+On the other hand [after 33 Million cases, more than 600,000 people died in the USA](https://www.nbcnews.com/health/health-news/coronavirus-deaths-united-states-each-day-2020-n1177936).
+
+COVID-19 odds: **1.800%**
+
+## Please for yourself and for others - get your vaccine!
+
+There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really, factually correct.
+
+
+[c]: https://health.clevelandclinic.org/when-should-you-get-vaccinated-if-youve-had-covid-19/
+[h]: https://www.publichealth.columbia.edu/public-health-now/news/relationship-between-vaccines-and-herd-immunity
+[r]: https://en.wikipedia.org/wiki/RNA_vaccine
+[l]: https://lore.kernel.org/ksummit/CAHk-=wiB6FJknDC5PMfpkg4gZrbSuC3d391VyReM4Wb0+JYXXA@mail.gmail.com/
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
