last updates to vaccine

--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -50,7 +50,7 @@ And if you're catholic like me, [listen to pope Francis](https://twitter.com/Pon
 
 ## How Linus Torvalds, the Linux founder explains vaccines
 
-**Update June 11, 2021**, [John Gruber]() linked to this mailing list written by the founder of Linux, you know, the operating system that's basically on all of the servers on the Internet.
+**Update June 11, 2021**, [John Gruber](https://daringfireball.net/linked/2021/06/10/linus-torvalds) linked to this mailing list written by the founder of Linux, you know, the operating system that's basically on all of the servers on the Internet.
 
 [Please read his entire response to an anti-vaxxer][l]
 
@@ -74,9 +74,9 @@ Again, read his entire email [it's really good][l]
 
 A: Please [read about this vaccine][r] again. All vaccines are great and have saved millions of people in the world, but these are modern and are really better:
 
-> RNA vaccines offer specific advantages over traditional protein vaccines.[5][4] Because RNA vaccines are not constructed from an active pathogen (or even an inactivated pathogen), they are non-infectious. In contrast, traditional vaccines require the production of pathogens, which, if done at high volumes, could increase the risks of localized outbreaks of the virus at the production facility.
+> RNA vaccines offer specific advantages over traditional protein vaccines. Because RNA vaccines are not constructed from an active pathogen (or even an inactivated pathogen), they are non-infectious. In contrast, traditional vaccines require the production of pathogens, which, if done at high volumes, could increase the risks of localized outbreaks of the virus at the production facility.
 
-### Q: what's the deal if I just "wait a little"? Why rush it?
+### Q: What's the deal if I just "wait a little"? Why rush it?
 
 A: Because of one thing - **Herd immunity**!
 
@@ -86,7 +86,7 @@ Just [read this article published by the University of Columbia, NY][h]. Especia
 
 Basically, if you're healthy and eligible for a vaccine, you should get it. Not just for yoruself, but also for others around you. [Please don't be selfish here - everyone needs to do their part][h]!
 
-### Q: what if I just get infected and I'll be done with it. I'm healthy, I'll be fine!?
+### Q: What if I just get infected and I'll be done with it. I'm healthy, I'll be fine, right?
 
 A: Maybe you will, maybe you won't. I personally know people in their thirties who got the virus and ended up in the hospital. Some of them died! Some of them survived but still months later had respitory issues and fatigue. And they were not obese, had no underlying conditions they knew of, nothing like that. Do you really want to risk it?
 
@@ -112,13 +112,15 @@ Just look at the USA stats: [966 people died after getting the vaccine](https://
 
 Vaccine odds: **0.001%**
 
-On the other hand [after 33 Million cases, more than 600,000 people died in the USA](https://www.nbcnews.com/health/health-news/coronavirus-deaths-united-states-each-day-2020-n1177936).
+On the other hand [after 33 Million cases, more than 600,000 people died in the USA](https://www.nbcnews.com/health/health-news/coronavirus-deaths-united-states-each-day-2020-n1177936). And we still don't know how many millions more will have long-term serious health effects after COVID-19.
 
 COVID-19 odds: **1.800%**
 
-## Please for yourself and for others - get your vaccine!
+## Do it not just for yourself but also for others - get your vaccine!
 
-There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really, factually correct.
+There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really factually correct. Don't believe in fake news.
+
+Thanks for doing your part! 💉💪
 
 
 [c]: https://health.clevelandclinic.org/when-should-you-get-vaccinated-if-youve-had-covid-19/
