--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -116,6 +116,56 @@ On the other hand [after 33 Million cases, more than 600,000 people died in the 
 
 COVID-19 odds: **1.800%**
 
+### Q: I still don't trust these vaccines, I think they were rushed! I don't want to take part in an experiment!
+
+The only part that was rushed was on the administrative side. The vaccines were developed quickly because we have much newer technology than before. Especially the above-mentioned mRNA technology. There were tests. There were trials. You're not a part of any experiment.
+
+Why did they expedite all the administrative routes to get the vaccines out? Because people were dying!
+
+We know how vaccines work. We know the long-term effects of vaccines and how they effectively saved us from some really awful diseases.
+
+What we don't know are the long-term effects of this novel Coronavirus. Do you want to be a part of a COVID-19 virus experiment?
+
+**Update June 23, 2021**, about getting kids vaccinated:
+
+### Q: What about kids? Should I vaccinate the kids?
+
+Well, next month I'm going to get my 12-year young daughter vaccinated. [Here's a great NY-times recap on kids' vaccination][nyt].
+
+Some highlights that explain my points above about the mRNA technology:
+
+> Dr. Paul Offit, director of the vaccine education center at Children’s Hospital of Philadelphia and a member of the Food and Drug Administration’s vaccine advisory panel, notes that while mRNA vaccines are new, mRNA molecules occur naturally throughout the human body.
+
+Turns out that mRNA is really Mother Effing Nature at its best:
+
+> “Every child in their cells has about 200,000 copies of messenger RNA,” said Dr. Offit. “Every cell in your body has these molecules which are making proteins and enzymes so you can continue to live. Although the technology is new for a vaccine, it’s not like it’s a molecule we haven’t seen before. I understand the anxiety, but it’s no different than when you make insulin or hemoglobin or albumin or any of the other proteins your body makes.”
+
+Here's how it works:
+
+> When your child gets the Pfizer shot in the arm, the injection includes the messenger molecule, which is packaged in an oily bubble that fuses to a cell. The cell then uses the mRNA molecule as a set of instructions to make something called a “spike protein,” which protrudes from the cell’s surface. (The surface of the coronavirus is covered with similar spikes.) A child’s immune system quickly recognizes that the spike protein is a foreign invader, and begins attacking it. The vaccine has essentially trained the immune system to recognize and attack the spike. Now, if your child ever comes into contact with the actual coronavirus, their immune system has learned how to handle it…
+
+When they did studies, children vaccinated never got ill:
+
+> The study enrolled 2,260 participants ages 12 to 15. Of those children, 1,131 received the vaccine (two shots, given three weeks apart) and 1,129 received saline placebo shots. The vaccine worked even better in children than it does in adults. No children in the vaccine group got sick with Covid-19, while 18 children in the placebo group became ill.
+
+The mRNA vaccine does it jobs and disappears:
+
+> One reassuring fact about the mRNA vaccines is that the molecule is destroyed by the cell once it completes its mission, so it doesn’t stay in the body. “This is one of the better technologies if you’re worried about something staying in your child’s body,” said Dr. Ibukun C. Kalu, a professor of pediatrics at Duke University. “There’s no way it can become stored in the DNA or trigger some long term cascade that will impact a child’s reproductive organs.”
+
+Seriously, there's nothing to worry about:
+
+> Another common worry among parents is the effect of a new drug or vaccine on brain development. Dr. Offit noted that the body has a blood-brain barrier that prevents most proteins from entering the brain. “Your brain is an immunologically protected site,” he said.
+
+The alternative is much worse - death and multiple organ failures:
+
+> Nearly four million children in the United States have tested positive for the virus since the start of the pandemic, according to the American Academy of Pediatrics, and more than 300 have died. This past winter, doctors reported growing numbers of patients with Multisystem Inflammatory Syndrome in Children, or MIS-C, a condition linked to Covid which can affect multiple organs, including the heart.
+
+And if you had any doubts if the COVID-19 virus is deadly with children, here goes the gloomy part:
+
+> Currently about 24 percent of the Covid cases in the United States are in young children, said Dr. Offit. He notes that more American children have died from Covid during the pandemic than die annually from other illnesses for which children are regularly vaccinated. About 75 to 150 children in the United States die of flu each year, he said, and about 100 children die of chickenpox.
+
+If you're a parent, [read the entire article about getting kids vaccinated][nyt].
+
 ## Do it not just for yourself but also for others - get your vaccine!
 
 There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really factually correct. Don't believe in fake news.
@@ -127,5 +177,6 @@ Thanks for doing your part! 💉💪
 [h]: https://www.publichealth.columbia.edu/public-health-now/news/relationship-between-vaccines-and-herd-immunity
 [r]: https://en.wikipedia.org/wiki/RNA_vaccine
 [l]: https://lore.kernel.org/ksummit/CAHk-=wiB6FJknDC5PMfpkg4gZrbSuC3d391VyReM4Wb0+JYXXA@mail.gmail.com/
+[nyt]: https://www.nytimes.com/article/kids-covid-vaccine.html
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
