vaccine pl and updates

--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -14,6 +14,18 @@ Finally both me and my wife managed to get our first shot 💉 of the [Moderna](
 * TOC
 {:toc}
 
+## TL;DR - get vaccinated, it's the right thing to do!
+
+If you don't have the time to read this 2,500+ word text, the gist is simple: get vaccinated to protect yourself and others; this will increase herd immunity, reduce possibilities of creating variants of COVID-19; mRNA vaccines are the future of medicine, so don't be afraid of them; get your kids vaccinated if possible.
+
+[I also wrote a short version of this article in Polish 🇵🇱](/pl/szczepimysie)
+
+Long story short:
+
+> Getting vaccinated is the [next right thing](/right) to do!
+
+That's it. For the details, read (and watch) below:
+
 ## mRNA vaccines and the Mother effing Nature at its best!
 
 When I saw the below video, I was blown away how the new mRNA vaccines work. They basically inject one (out of 29) types of protein from the COVID-19 into our body, which in turn is prompted to create antibodies for it and remember that this thing is bad.
@@ -160,11 +172,23 @@ The alternative is much worse - death and multiple organ failures:
 
 > Nearly four million children in the United States have tested positive for the virus since the start of the pandemic, according to the American Academy of Pediatrics, and more than 300 have died. This past winter, doctors reported growing numbers of patients with Multisystem Inflammatory Syndrome in Children, or MIS-C, a condition linked to Covid which can affect multiple organs, including the heart.
 
+Regarding [MIS-C condition, some vaccine experts having second thoughts about rushing to inoculate kids][lat] because of it, but as it turns out, after the vaccine, the condition is light and easily controllable:
+
+> At Children’s Hospital Los Angeles, pediatric cardiologist Dr. Jodie Votava-Smith has seen the wreckage of COVID-19 firsthand, and she has no doubts about the value of vaccinating kids. In the last month, she has helped treat a patient who developed myocarditis after a dose of vaccine, she said. The child’s symptoms were mild and readily treated with ibuprofen.
+
+But… if the same children get COVID, they need to get to hospital:
+
+> COVID-19’s toll on some children also lingers well beyond a bout of infection. As of mid-May, at least 4,018 in the U.S. have developed a condition called multisystem inflammatory syndrome in children, or MISC, that frequently appears four to six weeks after a child has cleared his or her infection and typically requires hospitalization.
+
 And if you had any doubts if the COVID-19 virus is deadly with children, here goes the gloomy part:
 
 > Currently about 24 percent of the Covid cases in the United States are in young children, said Dr. Offit. He notes that more American children have died from Covid during the pandemic than die annually from other illnesses for which children are regularly vaccinated. About 75 to 150 children in the United States die of flu each year, he said, and about 100 children die of chickenpox.
 
 If you're a parent, [read the entire article about getting kids vaccinated][nyt].
+
+**Update on Monday, July 5**
+
+Inspired by all this we decided to get my daughter vaccinated and she just got her first shot of Pfizer vaccine and we got our second shots of Moderna.
 
 ## Do it not just for yourself but also for others - get your vaccine!
 
@@ -172,7 +196,7 @@ There, I did the research for you. If you're still unsure, please click on all t
 
 Thanks for doing your part! 💉💪
 
-
+[lat]: https://www.latimes.com/science/story/2021-06-18/some-vaccine-experts-are-having-second-thoughts-about-immunizing-kids
 [c]: https://health.clevelandclinic.org/when-should-you-get-vaccinated-if-youve-had-covid-19/
 [h]: https://www.publichealth.columbia.edu/public-health-now/news/relationship-between-vaccines-and-herd-immunity
 [r]: https://en.wikipedia.org/wiki/RNA_vaccine
