--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -190,6 +190,8 @@ If you're a parent, [read the entire article about getting kids vaccinated][nyt]
 
 Inspired by all this we decided to get my daughter vaccinated and she just got her first shot of Pfizer vaccine and we got our second shots of Moderna.
 
+![{{ page.title }} - my daughter vaccinated](/img/szczepimysie.jpg)
+
 ## Do it not just for yourself but also for others - get your vaccine!
 
 There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really factually correct. Don't believe in fake news.
