--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -172,11 +172,11 @@ The alternative is much worse - death and multiple organ failures:
 
 > Nearly four million children in the United States have tested positive for the virus since the start of the pandemic, according to the American Academy of Pediatrics, and more than 300 have died. This past winter, doctors reported growing numbers of patients with Multisystem Inflammatory Syndrome in Children, or MIS-C, a condition linked to Covid which can affect multiple organs, including the heart.
 
-Regarding [MIS-C condition, some vaccine experts having second thoughts about rushing to inoculate kids][lat] because of it, but as it turns out, after the vaccine, the condition is light and easily controllable:
+Apparently, after a second dose of the vaccine, the kids develop a *heart muscle inflammation* called *myocarditis*, so [some vaccine experts having second thoughts about rushing to inoculate kids][lat] because of it, but as it turns out, after the vaccine, the condition is light and easily controllable:
 
 > At Children’s Hospital Los Angeles, pediatric cardiologist Dr. Jodie Votava-Smith has seen the wreckage of COVID-19 firsthand, and she has no doubts about the value of vaccinating kids. In the last month, she has helped treat a patient who developed myocarditis after a dose of vaccine, she said. The child’s symptoms were mild and readily treated with ibuprofen.
 
-But… if the same children get COVID, they need to get to hospital:
+So yes, the heart may be a little affected, but it's not even in the same ballpark as above-mentioned *MISC* condition, which affects children that get COVID. They need to get to hospital for a long time then:
 
 > COVID-19’s toll on some children also lingers well beyond a bout of infection. As of mid-May, at least 4,018 in the U.S. have developed a condition called multisystem inflammatory syndrome in children, or MISC, that frequently appears four to six weeks after a child has cleared his or her infection and typically requires hospitalization.
 
@@ -192,6 +192,14 @@ Inspired by all this we decided to get my daughter vaccinated and she just got h
 
 ![{{ page.title }} - my daughter vaccinated](/img/szczepimysie.jpg)
 
+Another update also from The New York Times: [Covid Is a Greater Risk to Young People Than the Vaccines][nyt2]:
+
+> Rather than play roulette with variants over the next several years, we can safely end this crisis by accepting an increased yet still exceedingly small risk of side effects that have not been seen to cause medium-term problems, let alone long-term ones.
+
+To sum it up (emphasis mine):
+
+> Bad things inevitably happen to a small number of people after any vaccination, a few caused by the vaccines, but most not. The risk of vaccination must be compared against the risk of the disease that a vaccine prevents, not against zero risk. The choice is between getting vaccinated against Covid-19 and eventually getting it. Given the current data, the conclusion is clear: **The virus is more dangerous.**
+
 ## Do it not just for yourself but also for others - get your vaccine!
 
 There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really factually correct. Don't believe in fake news.
@@ -204,5 +212,6 @@ Thanks for doing your part! 💉💪
 [r]: https://en.wikipedia.org/wiki/RNA_vaccine
 [l]: https://lore.kernel.org/ksummit/CAHk-=wiB6FJknDC5PMfpkg4gZrbSuC3d391VyReM4Wb0+JYXXA@mail.gmail.com/
 [nyt]: https://www.nytimes.com/article/kids-covid-vaccine.html
+[nyt2]: https://www.nytimes.com/2021/07/04/opinion/covid-vaccine-kids-risks.html
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
