vaccine final update

--- a/en/_posts/2021-05-19-vaccine.md
+++ b/en/_posts/2021-05-19-vaccine.md
@@ -200,6 +200,26 @@ To sum it up (emphasis mine):
 
 > Bad things inevitably happen to a small number of people after any vaccination, a few caused by the vaccines, but most not. The risk of vaccination must be compared against the risk of the disease that a vaccine prevents, not against zero risk. The choice is between getting vaccinated against Covid-19 and eventually getting it. Given the current data, the conclusion is clear: **The virus is more dangerous.**
 
+**Update Wednesday, 28 July 2021**:
+
+### Q: Now that we're 9 months vaccinating people, what are the results? What do we know?
+
+The Delta variant is spreading like crazy and mostly people who didn't get vaccinated suffer from it. And we've got more stats:
+
+[Texas has seen nearly 9,000 COVID-19 deaths since February. All but 43 were unvaccinated people.](https://www.texastribune.org/2021/07/21/coronavirus-texas-vaccinated-deaths/)
+
+Really, you don't need to understand much of mathematics to get this one - if you get a vaccine and the virus somehow still attacks you hard, your odds of dying are 0.5%, if you don't get vaccinated, the virus will kill you:
+
+> Of the 8,787 people who have died in Texas due to COVID-19 since early February, at least 43 were fully vaccinated, the Texas Department of State Health Services said. That means 99.5% of people who died due to COVID-19 in Texas from Feb. 8 to July 14 were unvaccinated, while 0.5% were the result of “breakthrough infections,” which DSHS defines as people who contracted the virus two weeks after being fully vaccinated.
+
+Now the sad part - if these people were vaccinated, how many of these 9000 would die? 50? 100? Maybe. But definitely not 90 times as much! These people didn't have to die!
+
+[Just get the vaccine before it's literally too late:](https://www.al.com/news/2021/07/im-sorry-but-its-too-late-alabama-doctor-on-treating-unvaccinated-dying-covid-patients.html)
+
+> Dr. Brytney Cobia said Monday that all but one of her COVID patients in Alabama did not receive the vaccine. The vaccinated patient, she said, just needed a little oxygen and is expected to fully recover. Some of the others are dying. “I’m admitting young healthy people to the hospital with very serious COVID infections,” wrote Cobia, a hospitalist at Grandview Medical Center in Birmingham, in an emotional Facebook post Sunday. “One of the last things they do before they’re intubated is beg me for the vaccine. I hold their hand and tell them that **I’m sorry, but it’s too late.**”
+
+And if you need an alternative explanation of why getting a vaccine is like using a seatbelt in a car, [listen to this guy break it down for you](https://mobile.twitter.com/Klefti/status/1419137012808835072).
+
 ## Do it not just for yourself but also for others - get your vaccine!
 
 There, I did the research for you. If you're still unsure, please click on all the links I provided above and watch the videos I included. And after that do your own research if you're still not convinced. Focus on what's really factually correct. Don't believe in fake news.
