--- a/pl/_posts/2014-04-01-hybryda.md
+++ b/pl/_posts/2014-04-01-hybryda.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "hybryda.jpg"
+img: "hybryda.jpg"
 ---
 
 # iPad Pro? Nie trzeba hybrydy ale jeszcze lepszych procesów i aplikacji
@@ -9,7 +9,7 @@ Coraz częściej słyszymy o rzekomym iPadzie Pro, który ma nadejść w tym rok
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 {% include lang.date.html date="2014-03-01" month=true %}
 
