--- a/pl/_posts/2014-06-01-skrzynka.md
+++ b/pl/_posts/2014-06-01-skrzynka.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "skrzynka.jpg"
+img: "skrzynka.jpg"
 ---
 
 # Inbox - Skrzynka Spraw Przychodzących na Maku, iPadzie i iPhonie
@@ -9,7 +9,7 @@ Piszę felietony do iMagazine od prawie początku naszego pisma i od zawsze, jak
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 {% include lang.date.html date="2014-05-01" month=true %}
 
@@ -28,7 +28,7 @@ Rok temu nagrałem kurs video - 10 krótkich, 5-minutowych klipów, w których d
 
 Podczas lekcji pierwszej mojego kursu dzielę się podstawowymi zasadami, które stosuję do zarządzania sprawami napływającymi - pokazuję, jak nimi zarządzam, jak sobie ze wszystkim radzę... i jak to generalnie ogarniam. W tym felietonie chciałbym się jeszcze bardziej zagłębić w temat, więc zachęcam do obejrzenia mojego video i zaraz potem do przeczytania tego felietonu do końca. Zamieszczę w nim moje najlepsze wskazówki i sugestie.
 
-
+{% include video.html id="ODZPj8d1G6Y" %}
 
 ## Skąd napływają do nas sprawy?
 
