--- a/pl/_posts/2014-09-01-air.md
+++ b/pl/_posts/2014-09-01-air.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "air.jpg"
+img: "air.jpg"
 ---
 
 # Mój pierwszy Mac - od Thinkpada do Macbooka Air
@@ -9,7 +9,7 @@ W styczniu 2008 roku Steve Jobs pokazał światu najcieńszego laptopa na świec
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 {% include lang.date.html date="2014-08-01" month=true %}
 
