--- a/pl/_posts/2014-07-01-projekty.md
+++ b/pl/_posts/2014-07-01-projekty.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "projekty.jpg"
+img: "projekty.jpg"
 ---
 
 # Jak podchodzić do zarządzania projektami na iUrządzeniach?
@@ -9,7 +9,7 @@ W zeszłym miesiącu pisałem o "Inboxie" czyli "Skrzynce Spraw Nadchodzących",
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 {% include lang.date.html date="2014-06-01" month=true %}
 
