--- a/en/_posts/2015-06-08-ipad-nano.md
+++ b/en/_posts/2015-06-08-ipad-nano.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine,iphone]
-img: "ipad-nano.jpg"
+img: "ipad-nano-6plus.jpg"
 ---
 
 # iPad nano: iPhone's no longer a one-armed bandit but that's actually OK!
