--- a/en/_posts/2021-06-17-smartere.md
+++ b/en/_posts/2021-06-17-smartere.md
@@ -5,7 +5,7 @@ img: "smartere.jpg"
 
 # Smartere Tech - on productivity and remote work
 
-I was invited by my Swedish friends from [Smartere Tech Podcast]() to talk about [productivity](/productivity) and [remote work](/nooffice). It was a fun conversation with the guys. The beginning of the episode is in Swedish but the conversation with me is in English, check it out!
+I was invited by my Swedish friends from [Smartere Tech Podcast](https://twitter.com/SmartereTech/status/1405460717101367296?s=20) to talk about [productivity](/productivity) and [remote work](/nooffice). It was a fun conversation with the guys. The beginning of the episode is in Swedish but the conversation with me is in English, check it out!
 
 <!--More-->
 
@@ -17,6 +17,7 @@ I was invited by my Swedish friends from [Smartere Tech Podcast]() to talk about
 <source src="https://mcdn.podbean.com/mf/web/exdqqr/Episode_3_mixdown7qcpn.mp3" type="audio/mpeg">
 </audio>
 
+[Alternatively listen on Overcast](https://overcast.fm/+uf6xJcf5g)
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
