--- a/pl/_posts/2021-10-11-wyborcza.md
+++ b/pl/_posts/2021-10-11-wyborcza.md
@@ -5,8 +5,7 @@ cover: "wyborcza.jpg"
 
 # W Gazecie Wyborczej o piąteczkach
 
-Zostałem zaproszony do udzielenia wywiadu do Gazety Wyborczej. W efekcie pojawił się tam bardzo ciekawy artykuł: **Czwartek, początek weekendu. Kto ma czterodniowy tydzień pracy, komu zapłacą co tydzień.**
- [Więcej informacji ℹ️](https://wyborcza.pl/duzyformat/7,127290,27662881,czwartek-poczatek-weekendu-kto-ma-czterodniowy-tydzien-pracy.html?disableRedirects=true)
+Zostałem zaproszony do udzielenia wywiadu do Gazety Wyborczej. W efekcie pojawił się tam bardzo ciekawy artykuł: **Czwartek, początek weekendu. Kto ma czterodniowy tydzień pracy, komu zapłacą co tydzień.** [Więcej informacji ℹ️](https://wyborcza.pl/duzyformat/7,127290,27662881,czwartek-poczatek-weekendu-kto-ma-czterodniowy-tydzien-pracy.html)
 
 <!--More-->
 
@@ -14,7 +13,9 @@ Zostałem zaproszony do udzielenia wywiadu do Gazety Wyborczej. W efekcie pojawi
 
 Cieszę się, że temat [Piąteczków](https://piateczek.pl) zyskuje na popularności i co więcej, rozmawia się wreszcie o naszym czasie pracy. Piszę o tym także w mojej najnowszej książce [No Office](https://NoOffice.org/piatek).
 
-Artykuł jest za paywallem Gazety, więc wydrukowałem [dla chętnych PDF](/pdf/wyborcza.pdf) - mam nadzieję, że Gazeta się nie obrazi. Przy okazji 
+Artykuł jest za paywallem Gazety, więc wydrukowałem [dla chętnych PDF](/pdf/wyborcza.pdf) - mam nadzieję, że Gazeta się nie obrazi. Przy okazji zachęcam gorąco do subskrybowania Gazety. Jestem od kilku lat płacącym subskrybentem (żona mnie namówiła) i nie żałuję. Świetne artykuły, głębokie analizy, rzetelne dziennikarstwo. Polecam.
+
+[**Czwartek, początek weekendu. Kto ma czterodniowy tydzień pracy, komu zapłacą co tydzień.**](https://wyborcza.pl/duzyformat/7,127290,27662881,czwartek-poczatek-weekendu-kto-ma-czterodniowy-tydzien-pracy.html)
 
 [n]: https://michael.gratis/nozbe_pl
 [np]: https://michael.gratis/nozbepersonal_pl
