--- a/en/_posts/2021-11-18-office22.md
+++ b/en/_posts/2021-11-18-office22.md
@@ -21,11 +21,9 @@ I like to use this place for my [iPad deep work](/ipadonly/) sessions or for cat
 
 ## Stand-up desk with professional recording studio gear
 
-I’ve got a new stand-up desk now. I’ve replaced [my old IKEA stand up desk](/homeoffice2015/) with a [new one](https://www.maidesite-desk.com) which has a memory setting for each position. On my desk you’ll still find [my old iMac 5K](/imac/) but right next to it you’ll see two [Elgato KeyLight](https://www.elgato.com/en/key-light) units (one lighting me from the side and one from the front).
+I’ve got a new stand-up desk now. I’ve replaced [my old IKEA stand up desk](/homeoffice2015/) with a [new one](https://www.maidesite-desk.com) which has a memory setting for each position. On my desk you’ll still find [my old iMac 5K](/imac/) and right next to it there are two [Elgato KeyLight](https://www.elgato.com/en/key-light) units (one lighting me from the side and one from the front).
 
 On the right-hand side of the Mac there’s a [Shure MV7 microphone](https://www.shure.com/en-US/products/microphones/mv7) and a telemprompter with an external 10” monitor on it (connected to the iMac with a HDMI cable) and a [Sony ZV-E10 camera behind it](https://www.youtube.com/watch?v=i_swGrFvNAA). The Sony camera is connected via [Elgato CamLink 4K](https://www.elgato.com/en/cam-link-4k) to the iMac.
-
-For professional interviews and [No Office FM podcast](/noofficefm/) recordings I use the Sony camera with the bokeh effect to look really handsome, but for more casual meetings I use the [Logitech Brio 4K webcam](https://www.logitech.com/en-us/products/webcams/brio-4k-hdr-webcam.960-001105.html) attached to my iMac. I no longer use the built-in iMac webcam as it’s really bad.
 
 ![{{ page.title }} 3](/img/office22-3.jpg)
 
@@ -34,6 +32,16 @@ On the left side I have a baby Yoda taking care of my 3-in-1 [Belkin MagSafe cha
 ![{{ page.title }} 4](/img/office22-4.jpg)
 
 I’ve moved the [green screen](/office21/#green-screen-as-a-bonus) to the back of the desk so that I can use it with both the Sony camera and the webcam for better background images.
+
+## Why the whole setup with teleprompter, Sony camera and external screen?
+
+It’s all to get a higher quality of my recordings. For professional interviews and [No Office FM podcast](/noofficefm/) recordings I use the Sony camera with the bokeh effect to look really handsome, just like this:
+
+![{{ page.title }} bokeh](/img/office22-5.jpg)
+
+The person I’m talking to is displayed on the external 10” screen and the teleprompter shows me them directly in front of the camera. This way I can look people directly in their eyes.
+
+For more casual meetings I prefer using the [Logitech Brio 4K webcam](https://www.logitech.com/en-us/products/webcams/brio-4k-hdr-webcam.960-001105.html) attached to my iMac. I no longer use the built-in iMac webcam as it’s really bad.
 
 ## How ergonomics have impacted the setup of my home office
 
