black firday enable

--- a/en/_posts/2021-11-18-office22.md
+++ b/en/_posts/2021-11-18-office22.md
@@ -41,6 +41,8 @@ It’s all to get a higher quality of my recordings. For professional interviews
 
 The person I’m talking to is displayed on the external 10” screen and the teleprompter shows me them directly in front of the camera. This way I can look people directly in their eyes.
 
+**Update:** many people asked me about this detailed setup so I followed up with **[my streaming / video conferencing setup in detail](/streaming/)** with cost calculations and exact links.
+
 For more casual meetings I prefer using the [Logitech Brio 4K webcam](https://www.logitech.com/en-us/products/webcams/brio-4k-hdr-webcam.960-001105.html) attached to my iMac. I no longer use the built-in iMac webcam as it’s really bad.
 
 ## How ergonomics have impacted the setup of my home office
