--- a/en/_posts/2020-03-19-newpro.md
+++ b/en/_posts/2020-03-19-newpro.md
@@ -1,6 +1,6 @@
 ---
 tags: [ipadonly]
-vid: "w0P0FQ770dE"
+vid: "DCzUfsHdrSM"
 ---
 
 # How to correctly use a computer - the new iPad Pro with the new keyboard
@@ -12,6 +12,8 @@ Just saw the launch of the new iPad Pro and I love it. I’m not sure I’m gett
 <!--More-->
 
 What do you think? Are you getting the new Pro? Or just the keyboard?
+
+<!--Old video on Apple's channel no longer works: "w0P0FQ770dE"-->
 
 [n]: https://michael.gratis/nozbe
 [p]: /podcast
